tests/type_errors/int_where_string_expected.nos
# expect_error: type mismatch
# Test: passing Int where String is expected

greet(name: String) = "Hello, " ++ name

main() = greet(42)
